# sam2

./: .gitignore  pyproject.toml
src/: main.py  prerecorded_bbox.py  prerecorded_points.py  visualiser.py  webcam.py
src/sam2/: sam2_object_tracker.py
